@@ -6,6 +6,7 @@ Bug fixes:
 - #6874 The logo on Windows taskbar is incorrect.
 - #6879 Update macOS installer drive icons
 - #6878 Update googletest library to latest version
+- #6882 Build macOS using qt 5.15.2 and avoid using brew for build
 
 Enhancements:
 - #6867 Create only 1 artefact for macOS
